tests/code/pages/errors/for-not-foreach.tht

for $a = 1; $a < 10; $a++ {
    // ...
}
